<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/nav_shop_now"-->
            <!--android:icon="@drawable/ic_add_shopping_cart_black_48dp"-->
            <!--android:title="@string/nav_products" />-->
        <item
            android:id="@+id/nav_shopping_cart"
            android:icon="@drawable/asset_shopping_cart_white"
            android:title="@string/title_activity_cart" />
        <item
            android:id="@+id/nav_branch"
            android:icon="@drawable/asset_store"
            android:title="@string/title_activity_branches" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/asset_notifications_white"
            android:title="@string/title_activity_notif" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/asset_mobile_transactions_white"
            android:title="@string/title_activity_orders" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/asset_logout_white"
            android:title="@string/nav_logout" />
    </group>

    <!--<group android:id="@+id/menu_bottom"-->
        <!--android:checkableBehavior="none">-->
        <!--<item-->
            <!--android:id="@+id/nav_logout"-->
            <!--android:icon="@drawable/asset_logout_white"-->
            <!--android:title="@string/nav_logout" />-->
    <!--</group>-->

</menu>
