<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:background="@color/colorPrimary"
    tools:context="com.uprise.ordering.RegistrationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:id="@+id/ll_connect">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginBottom="5dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/label_account"/>

        <!--Account Email-->
        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_reg_email_address"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_reg_account_email"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/ic_dialog_email"
                android:background="@color/icon_reg_bg_color" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:textColorHint="#fff"
                android:background="@color/edittext_color"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:hint="@string/tv_reg_email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:theme="@style/LandingEditText" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!--Account Password-->
        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_reg_password"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_reg_account_password"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/ic_lock_idle_lock"
                android:background="@color/icon_reg_bg_color" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:textColorHint="#fff"
                android:background="@color/edittext_color"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:theme="@style/LandingEditText" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/white"
            android:text="@string/label_shop_details"/>
        <!--Shop name-->
        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_shopname"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_reg_shop_name"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/ic_lock_idle_lock"
                android:background="@color/icon_reg_bg_color" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:textColorHint="#fff"
                android:background="@color/edittext_color"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_reg_shopname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="left"
                    android:textSize="12sp"
                    android:hint="@string/reg_shopname"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:theme="@style/LandingEditText" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--Shop address-->
        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_shopaddress"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_reg_shop_address"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/ic_lock_idle_lock"
                android:background="@color/icon_reg_bg_color" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:textColorHint="#fff"
                android:background="@color/edittext_color"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_reg_shopaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="left"
                    android:textSize="12sp"
                    android:hint="@string/reg_shopaddress"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:theme="@style/LandingEditText" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--Shop Shipping Address-->
        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_shop_shipping_address"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_reg_shop_shipping_address"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/ic_lock_idle_lock"
                android:background="@color/icon_reg_bg_color" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:textColorHint="#fff"
                android:background="@color/edittext_color"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_reg_shop_shipping_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="left"
                    android:textSize="12sp"
                    android:hint="@string/reg_shop_shipping_address"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:theme="@style/LandingEditText" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--Shop Contact Num-->
        <LinearLayout
            android:layout_marginBottom="5dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_shop_contact_num"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_reg_shop_contact_num"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/ic_lock_idle_lock"
                android:background="@color/icon_reg_bg_color" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:textColorHint="#fff"
                android:background="@color/edittext_color"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_reg_shop_contact_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="left"
                    android:textSize="12sp"
                    android:hint="@string/reg_shop_contact_num"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:theme="@style/LandingEditText" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add_branch"
            android:drawableLeft="@drawable/ic_add_grey600_48dp"
            android:background="@color/icon_reg_bg_color"
            android:textColor="@color/edittext_reg_color"
            android:textAlignment="textStart"
            android:text="@string/action_add_branch"/>

        <com.uprise.ordering.view.ExpandableHeightListView
            android:id="@+id/list_reg_branch"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:fadingEdge="none"
            android:focusable="false"
            android:scrollbars="none"/>

        <!--Register Button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_reg_btns"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:textAllCaps="true"
                android:id="@+id/btn_reg_submit"
                android:background="@drawable/register_button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
