<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
    <ImageView
        android:paddingTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".80"
        android:weightSum="1"
        android:scaleType="fitXY"
        android:id="@+id/iv_brand_image"
        android:src="@drawable/placeholder"
        />
    <!--<TextView-->
        <!--android:id="@+id/tv_brand_name"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Sample Brand name"-->
        <!--android:textStyle="bold"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:gravity="center_horizontal"-->
        <!--/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:id="@+id/ll_brand_price"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_brand_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Sample Brand name"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:gravity="left"
                />

                <TextView
                     android:id="@+id/tv_brand_price"
                    android:layout_width="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="0"
                    android:gravity="right"
                />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_brand_qty"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_brand_qty_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/label_brand_qty"
            android:layout_gravity="center_vertical|left"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:textColorHint="#fff"
            android:background="@color/quantity_bg_color"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_brand_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/label_brand_default_value"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:focusableInTouchMode="true"
                android:descendantFocusability="beforeDescendants"
                android:textColor="@android:color/white"
                android:theme="@style/LandingEditText" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/ll_qty_btns"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_marginTop="10dp">-->
        <!--<LinearLayout-->
            <!--android:id="@+id/ll_item_qty_buttons"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="3dp"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_weight="0.1"-->
            <!--android:layout_gravity="center_vertical">-->

            <!--<ImageButton-->
                <!--android:id="@+id/btn_plus_brand_qty"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="30dp"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:backgroundTint="@null"-->
                <!--android:src="@drawable/ic_add_grey600_48dp"  />-->
            <!--<ImageButton-->
                <!--android:id="@+id/btn_minus_brand_qty"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="30dp"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:backgroundTint="@null"-->
                <!--android:src="@drawable/ic_remove_grey600_48dp" />-->
        <!--</LinearLayout>-->
        <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/ll_transac_buttons"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/light"
            android:id="@+id/btn_add_to_cart"
            android:background="@drawable/asset_add_to_cart"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_save_new_qty"
            android:textColor="@color/black"
            android:visibility="gone"
            android:id="@+id/btn_save_edit_brand_item"
            android:background="@drawable/rounded_corners_white" />
    </LinearLayout>
</LinearLayout>

